--- a/source/_data/custom.styl
+++ b/source/_data/custom.styl
@@ -1,5 +1,5 @@
 body {
-    background-image: url(/images/blurry_time_square.jpg);
+    background-image: url("/images/blurry_time_square.jpg");
     background-attachment: fixed;
     background-repeat: round;
     background-size: contain;
